// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ChatChannelPreview Default 1`] = `
<button
  style={
    Object {
      "background": "none",
      "border": "none",
      "display": "flex",
      "width": "600px",
    }
  }
>
  <div
    className="makeStyles-root-6 makeStyles-root-7"
  >
    <div>
      <div
        className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-8 makeStyles-avatar-9"
      >
        <img
          alt="England"
          className="MuiAvatar-img"
          src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
        />
      </div>
    </div>
    <div>
      <div
        className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-8 makeStyles-avatar-10"
      >
        <img
          alt="France"
          className="MuiAvatar-img"
          src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
        />
      </div>
      <div
        className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-8 makeStyles-avatar-11"
      >
        <img
          alt="Germany"
          className="MuiAvatar-img"
          src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="makeStyles-messagePreviewContainer-1"
  >
    <p
      className="MuiTypography-root makeStyles-messagePreviewTitle-2 MuiTypography-body1"
    >
      England, France, Germany (3)
    </p>
    <p
      className="MuiTypography-root makeStyles-messagePreviewText-3 MuiTypography-body2"
    >
      <p
        className="MuiTypography-root makeStyles-messagePreviewLabel-4 makeStyles-messagePreviewLabel-5 MuiTypography-body2"
      >
        England: 
      </p>
      Hello fellow players.
    </p>
  </div>
</button>
`;

exports[`Storyshots components/ChatChannelPreview Messages Since 1`] = `
<button
  style={
    Object {
      "background": "none",
      "border": "none",
      "display": "flex",
      "width": "600px",
    }
  }
>
  <span
    className="MuiBadge-root"
  >
    <div
      className="makeStyles-root-28 makeStyles-root-29"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-30 makeStyles-avatar-31"
        >
          <img
            alt="England"
            className="MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
          />
        </div>
      </div>
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-30 makeStyles-avatar-32"
        >
          <img
            alt="France"
            className="MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-30 makeStyles-avatar-33"
        >
          <img
            alt="Germany"
            className="MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
          />
        </div>
      </div>
    </div>
    <span
      className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-colorPrimary"
    >
      2
    </span>
  </span>
  <div
    className="makeStyles-messagePreviewContainer-23"
  >
    <p
      className="MuiTypography-root makeStyles-messagePreviewTitle-24 MuiTypography-body1"
    >
      England, France, Germany (3)
    </p>
    <p
      className="MuiTypography-root makeStyles-messagePreviewText-25 MuiTypography-body2"
    >
      <p
        className="MuiTypography-root makeStyles-messagePreviewLabel-26 makeStyles-messagePreviewLabel-27 MuiTypography-body2"
      >
        You: 
      </p>
      Hello fellow players.
    </p>
  </div>
</button>
`;

exports[`Storyshots components/ChatChannelPreview User Is Sender 1`] = `
<button
  style={
    Object {
      "background": "none",
      "border": "none",
      "display": "flex",
      "width": "600px",
    }
  }
>
  <div
    className="makeStyles-root-17 makeStyles-root-18"
  >
    <div>
      <div
        className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-19 makeStyles-avatar-20"
      >
        <img
          alt="England"
          className="MuiAvatar-img"
          src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
        />
      </div>
    </div>
    <div>
      <div
        className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-19 makeStyles-avatar-21"
      >
        <img
          alt="France"
          className="MuiAvatar-img"
          src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
        />
      </div>
      <div
        className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-19 makeStyles-avatar-22"
      >
        <img
          alt="Germany"
          className="MuiAvatar-img"
          src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="makeStyles-messagePreviewContainer-12"
  >
    <p
      className="MuiTypography-root makeStyles-messagePreviewTitle-13 MuiTypography-body1"
    >
      England, France, Germany (3)
    </p>
    <p
      className="MuiTypography-root makeStyles-messagePreviewText-14 MuiTypography-body2"
    >
      <p
        className="MuiTypography-root makeStyles-messagePreviewLabel-15 makeStyles-messagePreviewLabel-16 MuiTypography-body2"
      >
        You: 
      </p>
      Hello fellow players.
    </p>
  </div>
</button>
`;

exports[`Storyshots components/ChatMessage Dark Color 1`] = `
<div
  className="makeStyles-root-43 makeStyles-root-48"
>
  <div />
  <div
    className="makeStyles-messageContainer-44 makeStyles-messageContainer-49"
  >
    <h6
      className="MuiTypography-root makeStyles-name-45 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-46 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-47 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Long 1`] = `
<div
  className="makeStyles-root-15 makeStyles-root-20"
>
  <div />
  <div
    className="makeStyles-messageContainer-16 makeStyles-messageContainer-21"
  >
    <h6
      className="MuiTypography-root makeStyles-name-17 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-18 MuiTypography-body1"
    >
      This is a reminder that the current phase will resolve in 1h0m0s (at 31 Jul 21 12:32 UTC), and you haven't declared that you are ready for the next phase. If you don't declare ready you will lose Quickness score. If you don't declare ready and don't provide any orders you will lose Reliability score, and be evicted from all staging game queues.
    </p>
    <span
      className="MuiTypography-root makeStyles-status-19 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Medium 1`] = `
<div
  className="makeStyles-root-8 makeStyles-root-13"
>
  <div />
  <div
    className="makeStyles-messageContainer-9 makeStyles-messageContainer-14"
  >
    <h6
      className="MuiTypography-root makeStyles-name-10 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-11 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-12 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage No Name 1`] = `
<div
  className="makeStyles-root-22 makeStyles-root-27"
>
  <div />
  <div
    className="makeStyles-messageContainer-23 makeStyles-messageContainer-28"
  >
    <h6
      className="MuiTypography-root makeStyles-name-24 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-25 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-26 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Not Delivered 1`] = `
<div
  className="makeStyles-root-36 makeStyles-root-41"
>
  <div />
  <div
    className="makeStyles-messageContainer-37 makeStyles-messageContainer-42"
  >
    <h6
      className="MuiTypography-root makeStyles-name-38 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-39 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-40 MuiTypography-caption"
    >
      Sending...
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Not Self 1`] = `
<div
  className="makeStyles-root-29 makeStyles-root-34"
>
  <div />
  <div
    className="makeStyles-messageContainer-30 makeStyles-messageContainer-35"
  >
    <h6
      className="MuiTypography-root makeStyles-name-31 MuiTypography-subtitle2"
    >
      
       
      Germany
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-32 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-33 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Selfish 1`] = `
<div
  className="makeStyles-root-42 makeStyles-root-51"
>
  <h6
    className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
  >
    
     
    England
  </h6>
  <p
    className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
  >
    Hello there. This is a message of medium length. Don't you agree?
  </p>
  <span
    className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
  >
    12:32:12 31/7/2021
  </span>
</div>
`;

exports[`Storyshots components/ChatMessage Short 1`] = `
<div
  className="makeStyles-root-1 makeStyles-root-6"
>
  <div />
  <div
    className="makeStyles-messageContainer-2 makeStyles-messageContainer-7"
  >
    <h6
      className="MuiTypography-root makeStyles-name-3 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-4 MuiTypography-body1"
    >
      Hello there
    </p>
    <span
      className="MuiTypography-root makeStyles-status-5 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Undelivered 1`] = `
<div
  className="makeStyles-root-42 makeStyles-root-49"
>
  <h6
    className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
  >
    
     
    England
  </h6>
  <p
    className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
  >
    Hello there. This is a message of medium length. Don't you agree?
  </p>
  <span
    className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
  >
    Sending...
  </span>
</div>
`;

exports[`Storyshots components/ChatMessage Username 1`] = `
<div
  className="makeStyles-root-77 makeStyles-root-82"
>
  <div />
  <div
    className="makeStyles-messageContainer-78 makeStyles-messageContainer-83"
  >
    <h6
      className="MuiTypography-root makeStyles-name-79 MuiTypography-subtitle2"
    >
      Diplicity
       
      
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-80 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-81 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage With Avatar France 1`] = `
<div
  className="makeStyles-root-50 makeStyles-root-55"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-57 makeStyles-avatar-58"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div
    className="makeStyles-messageContainer-51 makeStyles-messageContainer-56"
  >
    <h6
      className="MuiTypography-root makeStyles-name-52 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-53 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-54 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage With Avatar France Other 1`] = `
<div
  className="makeStyles-root-59 makeStyles-root-64"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-66 makeStyles-avatar-67"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div
    className="makeStyles-messageContainer-60 makeStyles-messageContainer-65"
  >
    <h6
      className="MuiTypography-root makeStyles-name-61 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-62 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-63 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage With Avatar Otto 1`] = `
<div
  className="makeStyles-root-68 makeStyles-root-73"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-75 makeStyles-avatar-76"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div
    className="makeStyles-messageContainer-69 makeStyles-messageContainer-74"
  >
    <h6
      className="MuiTypography-root makeStyles-name-70 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-71 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-72 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessageInput Default 1`] = `
<div
  className="makeStyles-root-84"
>
  <div
    className="makeStyles-subDiv-85"
  >
    <div
      className="MuiFormControl-root MuiTextField-root makeStyles-input-86"
      onKeyDown={[Function]}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
        data-shrink={false}
        htmlFor="chat-channel-input-field"
        id="chat-channel-input-field-label"
      >
        Message
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        onClick={[Function]}
      >
        <textarea
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
          disabled={false}
          id="chat-channel-input-field"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows="2"
          value=""
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-88 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-90"
          >
            <span>
              Message
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
          />
        </svg>
      </span>
    </button>
  </div>
  <span
    className="MuiTypography-root makeStyles-prompt-87 MuiTypography-caption"
  >
    Ctrl + Enter to send
  </span>
</div>
`;

exports[`Storyshots components/ChatMessageInput Wide 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-92"
  >
    <div
      className="makeStyles-subDiv-93"
    >
      <div
        className="MuiFormControl-root MuiTextField-root makeStyles-input-94"
        onKeyDown={[Function]}
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink={false}
          htmlFor="chat-channel-input-field"
          id="chat-channel-input-field-label"
        >
          Message
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          onClick={[Function]}
        >
          <textarea
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            disabled={false}
            id="chat-channel-input-field"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows="2"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-96 MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="PrivateNotchedOutline-legendLabelled-98"
            >
              <span>
                Message
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
            />
          </svg>
        </span>
      </button>
    </div>
    <span
      className="MuiTypography-root makeStyles-prompt-95 MuiTypography-caption"
    >
      Ctrl + Enter to send
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessageWithAvatar France 1`] = `
<div
  className="makeStyles-root-95 makeStyles-root-96"
>
  <div
    className="makeStyles-root-42 makeStyles-root-97"
  >
    <h6
      className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
    >
      
       
      England
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
    >
      12:32:12 31/7/2021
    </span>
  </div>
  <div
    className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-98 makeStyles-avatar-99"
  >
    <img
      alt="France"
      className="MuiAvatar-img"
      src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
    />
  </div>
</div>
`;

exports[`Storyshots components/ChatMessageWithAvatar Selfish 1`] = `
<div
  className="makeStyles-root-100 makeStyles-root-101"
>
  <div
    className="makeStyles-root-42 makeStyles-root-102"
  >
    <h6
      className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
    >
      
       
      England
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
    >
      12:32:12 31/7/2021
    </span>
  </div>
  <div
    className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-103 makeStyles-avatar-104"
  >
    <img
      alt="France"
      className="MuiAvatar-img"
      src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
    />
  </div>
</div>
`;

exports[`Storyshots components/ChatMessagesList Loading 1`] = `
<div
  className="makeStyles-root-69 makeStyles-root-70"
>
  <div
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessagesList Multiple Messages 1`] = `
Array [
  <div
    className="makeStyles-phaseDividerContainer-79"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-displayBlock"
    >
      ------ Spring 1900, Movement ------
    </h6>
  </div>,
  <div
    className="makeStyles-root-80"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-displayBlock"
    >
      New messages
    </h6>
  </div>,
  <div
    className="makeStyles-root-81 makeStyles-root-82"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-83 makeStyles-avatar-84"
      onClick={[Function]}
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="makeStyles-root-42 makeStyles-root-85"
    >
      <h6
        className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
      >
        
         
        England
      </h6>
      <p
        className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
      >
        Hello there. This is a message of medium length. Don't you agree?
      </p>
      <span
        className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
      >
        12:32:12 31/7/2021
      </span>
    </div>
  </div>,
  <div
    className="makeStyles-root-81 makeStyles-root-86"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-83 makeStyles-avatar-87"
      onClick={[Function]}
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="makeStyles-root-42 makeStyles-root-88"
    >
      <h6
        className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
      >
        
         
        England
      </h6>
      <p
        className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
      >
        Short message
      </p>
      <span
        className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
      >
        12:32:12 31/7/2021
      </span>
    </div>
  </div>,
  <div
    className="makeStyles-root-81 makeStyles-root-89"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-83 makeStyles-avatar-90"
      onClick={[Function]}
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="makeStyles-root-42 makeStyles-root-91"
    >
      <h6
        className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
      >
        
         
        England
      </h6>
      <p
        className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
      >
        Hello there. This is a message of medium length. Don't you agree?
      </p>
      <span
        className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
      >
        12:32:12 31/7/2021
      </span>
    </div>
  </div>,
  <div
    className="makeStyles-root-81 makeStyles-root-92"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-83 makeStyles-avatar-93"
      onClick={[Function]}
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="makeStyles-root-42 makeStyles-root-94"
    >
      <h6
        className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
      >
        
         
        England
      </h6>
      <p
        className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
      >
        Hello there. This is a message of medium length. Don't you agree?
      </p>
      <span
        className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
      >
        Sending...
      </span>
    </div>
  </div>,
]
`;

exports[`Storyshots components/ChatMessagesList No Messages 1`] = `null`;

exports[`Storyshots components/ChatMessagesList One Message 1`] = `
Array [
  <div
    className="makeStyles-phaseDividerContainer-72"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-displayBlock"
    >
      ------ Spring 1900, Movement ------
    </h6>
  </div>,
  <div
    className="makeStyles-root-73"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-displayBlock"
    >
      New messages
    </h6>
  </div>,
  <div
    className="makeStyles-root-74 makeStyles-root-75"
  >
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-76 makeStyles-avatar-77"
      onClick={[Function]}
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="makeStyles-root-42 makeStyles-root-78"
    >
      <h6
        className="MuiTypography-root makeStyles-name-43 MuiTypography-subtitle2"
      >
        
         
        England
      </h6>
      <p
        className="MuiTypography-root makeStyles-text-44 MuiTypography-body1"
      >
        Hello there. This is a message of medium length. Don't you agree?
      </p>
      <span
        className="MuiTypography-root makeStyles-status-45 MuiTypography-caption"
      >
        12:32:12 31/7/2021
      </span>
    </div>
  </div>,
]
`;

exports[`Storyshots components/ChatNewMessagesBanner Default 1`] = `
<div
  className="makeStyles-root-100"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-displayBlock"
  >
    New messages
  </h6>
</div>
`;

exports[`Storyshots components/ChatPhaseDivider Default 1`] = `
<h6
  className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary MuiTypography-displayBlock"
>
  ------ Fall 1903, Movement ------
</h6>
`;

exports[`Storyshots components/ErrorMessage Internal Server Error 1`] = `
<div
  className="makeStyles-root-81"
>
  <div>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
    <p
      className="MuiTypography-root MuiTypography-body1"
      role="alert"
    >
      Internal server error
       (
      500
      )
    </p>
  </div>
</div>
`;

exports[`Storyshots components/Loading Default 1`] = `
<div
  className="makeStyles-root-84 makeStyles-root-85"
>
  <div
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatar England 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-107 makeStyles-avatar-108"
>
  <img
    alt="England"
    className="MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar France 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-101 makeStyles-avatar-102"
>
  <img
    alt="France"
    className="MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Germany 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-105 makeStyles-avatar-106"
>
  <img
    alt="Germany"
    className="MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Muted 1`] = `
<span
  className="MuiBadge-root"
>
  <div
    className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-119 makeStyles-avatar-120 MuiAvatar-colorDefault"
  >
    Fra
  </div>
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircular"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 11h-1.7c0 .74-.16 1.43-.43 2.05l1.23 1.23c.56-.98.9-2.09.9-3.28zm-4.02.17c0-.06.02-.11.02-.17V5c0-1.66-1.34-3-3-3S9 3.34 9 5v.18l5.98 5.99zM4.27 3L3 4.27l6.01 6.01V11c0 1.66 1.33 3 2.99 3 .22 0 .44-.03.65-.08l1.66 1.66c-.71.33-1.5.52-2.31.52-2.76 0-5.3-2.1-5.3-5.1H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c.91-.13 1.77-.45 2.54-.9L19.73 21 21 19.73 4.27 3z"
      />
    </svg>
  </span>
</span>
`;

exports[`Storyshots components/NationAvatar No Link Dark Color 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-116 MuiAvatar-colorDefault"
>
  Fra
</div>
`;

exports[`Storyshots components/NationAvatar No Link Long Abbreviation 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-111 makeStyles-avatar-112 MuiAvatar-colorDefault"
>
  Russ
</div>
`;

exports[`Storyshots components/NationAvatar No Link Short Abbreviation 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-113 makeStyles-avatar-114 MuiAvatar-colorDefault"
>
  Fra
</div>
`;

exports[`Storyshots components/NationAvatar Otto 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-117 makeStyles-avatar-118"
>
  <img
    alt="Diplicity"
    className="MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/img/otto.png"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Russia 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-103 makeStyles-avatar-104"
>
  <img
    alt="Russia"
    className="MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Turkey 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-109 makeStyles-avatar-110"
>
  <img
    alt="Turkey"
    className="MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatarGroup Eight Avatars 1`] = `
<div
  className="makeStyles-root-170 makeStyles-root-171"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-173"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-174"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-175"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-176"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-177"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-178"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-179"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-172 makeStyles-avatar-180"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Five Avatars 1`] = `
<div
  className="makeStyles-root-143 makeStyles-root-144"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-145 makeStyles-avatar-146"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-145 makeStyles-avatar-147"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-145 makeStyles-avatar-148"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-145 makeStyles-avatar-149"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-145 makeStyles-avatar-150"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Four Avatars 1`] = `
<div
  className="makeStyles-root-136 makeStyles-root-137"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-138 makeStyles-avatar-139"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-138 makeStyles-avatar-140"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-138 makeStyles-avatar-141"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-138 makeStyles-avatar-142"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Nine Avatars 1`] = `
<div
  className="makeStyles-root-181 makeStyles-root-182"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-184"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-185"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-186"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-187"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-188"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-189"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-190"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-191"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-183 makeStyles-avatar-192"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup One Avatar 1`] = `
<div
  className="makeStyles-root-121 makeStyles-root-122"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-123 makeStyles-avatar-124"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Seven Avatars 1`] = `
<div
  className="makeStyles-root-160 makeStyles-root-161"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-163"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-164"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-165"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-166"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-167"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-168"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-169"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Six Avatars 1`] = `
<div
  className="makeStyles-root-151 makeStyles-root-152"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-153 makeStyles-avatar-154"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-153 makeStyles-avatar-155"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-153 makeStyles-avatar-156"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-153 makeStyles-avatar-157"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-153 makeStyles-avatar-158"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-153 makeStyles-avatar-159"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Ten Avatars 1`] = `
<div
  className="makeStyles-root-193 makeStyles-root-194"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-196"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-197"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-198"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-199"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-200"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-201"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-202"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-203"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-195 makeStyles-avatar-204"
    >
      <img
        alt="England"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Three Avatars 1`] = `
<div
  className="makeStyles-root-130 makeStyles-root-131"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-132 makeStyles-avatar-133"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-132 makeStyles-avatar-134"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-132 makeStyles-avatar-135"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Two Avatars 1`] = `
<div
  className="makeStyles-root-125 makeStyles-root-126"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-127 makeStyles-avatar-128"
    >
      <img
        alt="France"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-127 makeStyles-avatar-129"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
</div>
`;
